Yandex_api_Main_Kits

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-# Тесты на проверку параметра firstName при создании пользователя в Яндекс.Прилавок с помощью API Яндекс.Прилавок.
+# - Тесты на создание пользователя и получения его токена с помощью API Яндекс.Прилавок.
+- Тесты на создание наборов с продуктами в Прилавке конкретного пользователя с помощью API Яндекс.Прилавок.
 - Для запуска тестов должны быть установлены пакеты pytest и requests
 - Запуск всех тестов выполянется командой pytest
